MIFOS-5157 mifos-cli.exe could be useful for debugging startup issues