@@ -74,6 +74,9 @@
 			<plugin>
 				<groupId>com.akathist.maven.plugins.launch4j</groupId>
 				<artifactId>launch4j-maven-plugin</artifactId>
+				<!-- Two executions follow, one with GUI headerType (mifos.exe) and one CLI console headerType (mifos-cli.exe).
+				     When changing any paramters below, make sure you change both sections...
+				-->
 				<executions>
 					<execution>
 						<id>launch4j</id>
@@ -87,7 +90,6 @@
 								 @see http://launch4j.sourceforge.net/docs.html
 							-->
 							<headerType>gui</headerType>
-							<!-- Sometimes useful for debug in dev, only: <headerType>console</headerType> -->
 							<jar>mifos.war</jar>
 							<dontWrapJar>true</dontWrapJar>
 							<errTitle>Mifos</errTitle>
@@ -145,6 +147,71 @@
 									 should be set to approx. how long it takes for the tray icon infos to appear... -->
 								<timeout>30</timeout>
 							</splash>
+						</configuration>
+					</execution>
+					<execution>
+						<id>launch4j-cli</id>
+						<phase>package</phase>
+						<goals>
+							<goal>launch4j</goal>
+						</goals>
+						<configuration>
+							<!-- 
+								 @see http://9stmaryrd.com/tools/launch4j-maven-plugin/
+								 @see http://launch4j.sourceforge.net/docs.html
+							-->
+							<headerType>console</headerType>
+							<jar>mifos.war</jar>
+							<dontWrapJar>true</dontWrapJar>
+							<errTitle>Mifos</errTitle>
+							<outfile>${project.build.directory}/mifos-cli.exe</outfile>
+							<downloadUrl>http://java.com/download</downloadUrl>
+							<classPath>
+								<mainClass>${exec.war.main.class}</mainClass>
+								<!-- NOTE This is weird, this <preCp>anything</preCp> MUST be left as is... it adds the  
+								     literal String "anything" before mifos.jar to the -cp, but removing this line leads to 
+								     "An error occurred while starting the application." - probably a launch4j bug. 
+								 -->
+								<preCp>anything</preCp>
+							</classPath>
+							<chdir>.</chdir>
+							<!-- Let's NOT use <stayAlive>true</stayAlive>, as that's more confusing than helpful...
+								 users will THINK that they can kill (or Ctrl-C) the mifos.exe and expect Mifos
+								 to stop - but actually it won't, as the javaw.exe will keep running... better
+								 let the mifos.exe live only to launch and show the Splash screen, then stop. -->
+							<singleInstance>
+								<!-- This would be useful, to prevent end-users from clicking
+									 mifos.exe twice and to avoid having two processes running,
+									 BUT this doesn't actually seem to be working... :-(
+									 On Windows 7 at least, may be it works XP,
+									 so leaving it as no harm either.
+								 -->
+								<mutexName>mifos-exe-singleInstance-mutex</mutexName>
+								<windowTitle>Mifos</windowTitle>
+							</singleInstance>
+							<jre>
+								<minVersion>1.6.0</minVersion>
+								<!-- TODO Is a JRE enough? Because of the JSPs, we may require JDK... 
+									in which case downloadUrl must be changed as well! -->
+								<jdkPreference>preferJre</jdkPreference>
+							</jre>
+							<!-- Note that -Xms -Xmx -XX:MaxPermSize heap etc. sizes are
+							     intentionally not baked into the EXE, but are defined in a mifos.l4j.ini,
+							     see http://launch4j.sourceforge.net/docs.html#Additional_jvm_options -->
+							<versionInfo>
+								<!-- Use of parsedVersion because Windows fileVersion & productVersion have to be completely numeric and cannot contain -SNAPSHOT -->
+								<fileVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${parsedVersion.buildNumber}</fileVersion>
+								<txtFileVersion>${project.version}</txtFileVersion>
+								<productVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${parsedVersion.buildNumber}</productVersion>
+								<txtProductVersion>${project.version}</txtProductVersion>
+								<fileDescription>Mifos Open Source Microfinance http://mifos.org/</fileDescription>
+								<copyright>Mifos.org</copyright>
+								<originalFilename>mifos.exe</originalFilename>
+								<productName>Mifos</productName>
+								<companyName>Mifos</companyName>
+								<internalName>mifos</internalName>
+							</versionInfo>
+							<icon>src/main/launch4j/mifos.ico</icon>
 						</configuration>
 					</execution>
 				</executions>
